--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container mt-3">
   <% @experiences.each do | experience|%>
     <%= experience.nom %>
     <%= experience.description %>
-    <%= experience.prix %>
-     <br>
+    <p><%= experience.prix %>€</p>
+     <hr>
   <% end %>
 
 </div>
