--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <img src="/images/istockphoto-622776362-612x612.jpg" alt="logo" width="50" height="50">
-    <h3>IMMatriochka</h3>
+    <img src="/images/istockphoto-622776362-612x612.jpg" alt="logo" width="65" height="65">
+    <h1>IM🪆Matriochka</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
