--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,9 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+h1  {
+  font-family: "Caveat", serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+  }
