--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
 <div class="container">
   Bonjour <%= current_user.email %>
 </div>
+<div class="text-center">
+  <h2>
+    <%= link_to"Découvrez nos expériences", experiences_path %>
+  </h2>
+</div>
