--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 
   <div class="text-center">
-    <h2>
+    <h2 class = "mt-5">
       <%= link_to"Découvrez nos expériences", experiences_path %>
     </h2>
   </div>
