--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -5,7 +5,7 @@
     </h3>
     <div class="form">
 
-      <%= simple_form_for [@experience, @reservation] do |f| %>
+      <%= simple_form_for [experience, reservation] do |f| %>
 
       <%= f.input :date_de_debut,
         as: :string,
@@ -15,8 +15,8 @@
         as: :string,
             input_html: { data: { controller: "datepicker" }
       }%>
-    
-      <%= f.submit "Submit review", class: "btn btn-primary" %>
+
+      <%= f.submit "Reserver", class: "btn btn-primary" %>
       <% end %>
 
 
