--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -3,8 +3,25 @@
     <% @experiences.each do | experience|%>
     <%= link_to experience_path(experience), class: "text-decoration-none text-dark" do %>
       <div class="experience-card">
-      <p><img src="/images/istockphoto-622776362-612x612.jpg" alt="logo" width="180" height="180"></p>
-      <p class="name"><%= experience.nom %></p>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/images/istockphoto-622776362-612x612.jpg" alt="logo" width="180" height="180">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/Museo_Frida_Kahlo.jpg" alt="logo" width="180" height="180">
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      <p class="name mt-3"><%= experience.nom %></p>
       <p><%= experience.description %></p>
       <p><%= experience.prix %>€</p>
        <%= link_to "Découvre cette expérience", experience_path(experience) %>
