--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -8,6 +8,7 @@
       <%= f.input :nom %>
       <%= f.input :description %>
       <%= f.input :prix %>
+      <%= f.input :adresse %>
       <%= f.button :submit %>
       <% end %>
 
