--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -3,6 +3,7 @@
     <%= @experience.nom %>
     <%= @experience.description%>
     <p><%= @experience.prix%>€</p>
+    <%= @experience.adresse %>
   </div>
 
    <div data-controller="toggle" class="mt-5">
