--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,5 +1,12 @@
+
+<div style="width: 100%; height: 300px;"
+  data-controller="map"
+  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 <div class="container ">
   <div class="experience-card mt-3">
+
     <%= @experience.nom %>
     <%= @experience.description%>
     <p><%= @experience.prix%>€</p>
