--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,2 +1,36 @@
 // Specific CSS for your home-page
 
+.banner {
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+  position: relative;
+}
+
+.banner h1 {
+  position: absolute;
+  margin-right: 5px;
+  top : 67%;
+  left: 60%;
+  background-color: white;
+  padding: 25px 25px;
+  color: palevioletred;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 48px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.btn-home {
+  position: absolute;
+  top: 85%;
+  left:75%;
+  background-color: palevioletred;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  text-decoration: none;
+}
