--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,3 +1,4 @@
+ <%= render "shared/navbar" %>
 <div class="container mt-3">
   <div class="experiences mb-5">
     <% @experiences.each do | experience|%>
