--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,7 +1,9 @@
+ <%= render "shared/navbar" %>
 <div class="container">
   <div class="new">
     <h3 class= "mt-3">
       Crée une nouvelle expérience
+
     </h3>
     <div class="form">
       <%= simple_form_for (@experience) do |f|%>
