--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,9 @@
+<div class="home">
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path('home2.jpg') %>);">
 
-
-
-  <div class="text-center">
-    <h2 class = "mt-5">
-      <%= link_to"Découvrez nos expériences", experiences_path %>
-    </h2>
+    <div class="container">
+      <h1 class="text-center">Découvrez nos expériences uniques </h1>
+     <%= link_to "Cliquez-ici", experiences_path, class:"btn-home" %>
+    </div>
   </div>
+</div>
