--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,4 +1,4 @@
-
+ <%= render "shared/navbar" %>
 <div style="width: 100%; height: 300px;"
   data-controller="map"
   data-map-markers-value="<%= @markers.to_json %>"
@@ -8,7 +8,7 @@
   <div class="experience-card mt-3">
 
     <%= @experience.nom %>
-    <%= @experience.description%>
+    <p> <%= @experience.description%></p>
     <p><%= @experience.prix%>€</p>
     <%= @experience.adresse %>
   </div>
