Seed avec photos

--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -14,7 +14,7 @@
 
               <!-- Image 2 : dynamique -->
               <div class="carousel-item">
-                <%= image_tag experience.photo_url, alt: experience.nom, width: 180, height: 180 %>
+                <%= image_tag asset_path(experience.photo_url), alt: experience.nom, width: 180, height: 180 %>
               </div>
             </div>
 
