Ajout photo dans la show

--- a/app/assets/stylesheets/components/experiences.scss
+++ b/app/assets/stylesheets/components/experiences.scss
@@ -21,3 +21,13 @@
   font-weight: bolder;
   font-family:"Rufina", serif; ;
 }
+
+.photo-container {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 200px;
+  gap: 30px;
+}
