--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -3,17 +3,22 @@
   data-controller="map"
   data-map-markers-value="<%= @markers.to_json %>"
   data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
-<div class="container ">
-  <div class="experience-card mt-3">
+</div>
 
-    <%= @experience.nom %>
-    <p> <%= @experience.description%></p>
-    <p><%= @experience.prix%>€</p>
-    <%= @experience.adresse %>
+<div class="container">
+  <div class="photo-container">
+    <div class="photo mt-3">
+      <%=image_tag asset_path (@experience.photo_url), width: 180, height: 180 %>
+    </div>
+    <div class="experience-card mt-3">
+      <%= @experience.nom %>
+      <p> <%= @experience.description%></p>
+      <p><%= @experience.prix%>€</p>
+      <%= @experience.adresse %>
+    </div>
   </div>
 
-   <div data-controller="toggle" class="mt-5">
+   <div data-controller="toggle" class="text-center mt-5">
       <button class="btn btn-secondary" data-action="click->toggle#fire"> Réserver</button>
       <div data-toggle-target="toggableElement"  class="d-none">
         <%= render "reservations/form", experience: @experience, reservation: Reservation.new %>
