--- a/app/assets/stylesheets/components/experiences.scss
+++ b/app/assets/stylesheets/components/experiences.scss
@@ -14,6 +14,7 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   transition: all 0.3s ease;
+  background-color: #FFF2AF;
 }
 .name{
   color:#DE3163;
