--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #DC8686;
+  background: #D5203E;
+
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -15,4 +16,5 @@ h1  {
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
+  color: white;
   }
