--- a/app/assets/stylesheets/components/experiences.scss
+++ b/app/assets/stylesheets/components/experiences.scss
@@ -4,6 +4,12 @@
   grid-gap: 20px;
   margin-top: 1px;
 }
+
+.caroussel-item > img {
+  object-position: center;
+  object-fit: cover;
+}
+
 .experience-card{
   display:  block;
   align-items: center;
@@ -32,3 +38,21 @@
   height: 200px;
   gap: 30px;
 }
+ .photo > img {
+  height: 200px;
+  width: 250px;
+  object-fit: cover;
+  object-position: center;
+  border : px solid white
+ }
+
+ .btn-reserver {
+  background-color: #D5203E;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+ }
