--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -15,7 +15,7 @@
             as: :string,
                 input_html: { data: { controller: "datepicker" }
           }%>
-          <%= f.submit "Reserver", class: "btn btn-primary" %>
+          <%= f.submit "Confirmer", class: "btn-reserver" %>
           <% end %>
         </div>
       </div>
