--- a/app/assets/stylesheets/components/experiences.scss
+++ b/app/assets/stylesheets/components/experiences.scss
@@ -22,6 +22,14 @@
   transition: all 0.3s ease;
   background-color: #FFF2AF;
 }
+
+.decouvre {
+  text-decoration: none;
+  color: #DE3163;
+  font-weight: bold;
+  font-size: 16px;
+}
+
 .name{
   color:#DE3163;
   font-size: 24px;
