Couleur et border-radius

--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -13,8 +13,8 @@
     <div class="experience-card mt-3">
       <%= @experience.nom %>
       <p> <%= @experience.description%></p>
-      <p><%= @experience.prix%>€</p>
-      <%= @experience.adresse %>
+      <p><i class="fa-solid fa-tags me-2"> </i><%= @experience.prix%>€</p>
+      <i class="fa-solid fa-location-dot me-2"></i><%= @experience.adresse %>
     </div>
   </div>
 
