--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,6 +13,11 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.container-fluid img {
+  border-radius: 50%;
+}
+
 h1  {
   font-family: "Caveat", serif;
   font-optical-sizing: auto;
