--- a/app/assets/stylesheets/components/experiences.scss
+++ b/app/assets/stylesheets/components/experiences.scss
@@ -20,7 +20,9 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   transition: all 0.3s ease;
-  background-color: #FFF2AF;
+  background-color: #FFF6B3;
+  border : 3px solid #D5203E;
+  color : #D5203E;
 }
 
 .decouvre {
@@ -51,9 +53,9 @@
   width: 250px;
   object-fit: cover;
   object-position: center;
-  border : px solid white
+  border : 3px solid #D5203E;
+  border-radius: 5px;
  }
-
  .btn-reserver {
   background-color: #D5203E;
   padding: 10px 20px;
