des couleurs encore

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,9 +12,9 @@
   margin-right: 5px;
   top : 67%;
   left: 60%;
-  background-color: white;
+  background-color: #D5203E;
   padding: 25px 25px;
-  color: palevioletred;
+  color: #FFF574 ;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 48px;
   font-weight: bold;
@@ -25,8 +25,8 @@
   position: absolute;
   top: 85%;
   left:75%;
-  background-color: palevioletred;
-  color: white;
+  background-color: #FFF6B3;
+  color:#D5203E ;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
