--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,3 +6,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Rufina:wght@400;700&display=swap');
 @import "experiences";
 @import "pop-up";
+@import "form";
