--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path('home2.jpg') %>);">
 
     <div class="container">
+      <div class="hommage">En hommage à toutes ces femmes qui ont osé rêver, créer, lutter et transformer le monde.</div>
       <h1 class="text-center">Découvrez nos expériences uniques </h1>
      <%= link_to "Cliquez-ici", experiences_path, class:"btn-home" %>
     </div>
