--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -34,3 +34,16 @@
   font-size: 16px;
   text-decoration: none;
 }
+
+.hommage {
+  color: white;
+  position :absolute;
+  width: 320px;
+  height: 150px;
+  top: 20%;
+  left : 25px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
