Ajout d'avis sur les expériences

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>ImMatriochka</title>
+    <link rel="stylesheet" href="https://ga.jspm.io/npm:star-rating.js@4.3.0/dist/star-rating.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <%= csrf_meta_tags %>
@@ -13,7 +14,7 @@
   </head>
 
   <body>
-   
+
     <%= render "shared/flashes" %>
     <%= yield %>
   </body>
