--- a/app/assets/stylesheets/components/experiences.scss
+++ b/app/assets/stylesheets/components/experiences.scss
@@ -66,3 +66,11 @@
   color: white;
   font-size: 16px;
  }
+
+ .avis > a {
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: bolder;
+    margin-top: 20px²;
+ }
