--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -18,13 +18,32 @@
     </div>
   </div>
 
-   <div data-controller="toggle" class="text-center mt-5">
-      <button class="btn-reserver" data-action="click->toggle#fire"> Réserver </button>
-      <div data-toggle-target="toggableElement"  class="d-none">
-        <%= render "reservations/form", experience: @experience, reservation: Reservation.new %>
-      </div>
+<div class="avis">
+  <%= link_to "Donnez votre avis", new_experience_review_path(@experience), class: " text-decoration-none text-dark" %>
+</div>
 
-   </div>
+<div class="avis-container">
+  <% if @experience.reviews.any? %>
+    <% @experience.reviews.each do |review| %>
+      <div class="review">
+        <p><%= review.contenu %></p>
+        <p>Note : <%= review.note %> ⭐</p>
+        <hr>
+      </div>
+    <% end %>
+  <% else %>
+    <p>Pas d'avis pour le moment.</p>
+  <% end %>
+</div>
+
+
+<div data-controller="toggle" class="text-center mt-5">
+  <button class="btn-reserver" data-action="click->toggle#fire"> Réserver </button>
+  <div data-toggle-target="toggableElement"  class="d-none">
+    <%= render "reservations/form", experience: @experience, reservation: Reservation.new %>
+  </div>
+
+</div>
 
   <hr>
   <%= link_to "Retour", experiences_path, class: "text-decoration-none text-dark" %>
