Ajout user_id dans reservations

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -25,3 +25,9 @@ h1  {
   font-style: normal;
   color: white;
   }
+
+.dropdown-menu {
+  background-color: #D5203E;
+  border: none;
+  color:white;
+}
