Ajout onglet mes réservations

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -7,20 +7,15 @@
         </h3>
         <div class="form">
           <%= simple_form_for [experience, reservation] do |f| %>
-        <%= f.input :date_de_debut,
+          <%= f.input :date_de_debut,
             as: :string,
-            input_html: {
-              data: {
-                controller: "datepicker",
-                datepicker_reservations_value: @reservations.to_json
-              }
-            } %>
-
+                input_html: {
+                  data: { controller: "datepicker" }
+          }%>
           <%= f.input :date_de_fin,
             as: :string,
-            input_html: {
-              id: "reservation_date_de_fin"
-            } %>
+                input_html: { data: { controller: "datepicker" }
+          }%>
           <%= f.submit "Confirmer", class: "btn-reserver" %>
           <% end %>
         </div>
