--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :nickname,
+                input_html: { autocomplete: "nom" } %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
