--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -3,21 +3,14 @@
 
   <div class="messages"
     data-controller="chatroom-subscription"
-    data-chatroom-subscription-chatroom-id-value = "<%= @chatroom.id %>">
+    data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
    <% @chatroom.messages.each do |message| %>
-    <div id="message_<%= message.id %>" >
-      <small>
-        <strong>
-          <%= message.user.nickname %></strong>
-          <i><%= message.created_at.strftime("%d/%m/%Y") %></i>
-      </small>
-      <p><%= message.contenu %></p>
-    </div>
+    <%= render 'messages/message', message: message %>
     <% end %>
   </div>
-</div>
 
-<%= simple_form_for [@chatroom, @message], remote: true do |f| %>
-  <%= f.input :contenu, label: false, placeholder: "Message ##{@chatroom.nom}" %>
-<% end %>
+
+  <%= simple_form_for [@chatroom, @message], remote: true do |f| %>
+    <%= f.input :contenu, label: false, placeholder: "Message ##{@chatroom.nom}" %>
+  <% end %>
 </div>
