--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -1,26 +1,27 @@
 .chatroom {
   margin-top: 9px;
+  height: calc(100vh - 20px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
 
-
   h1 {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid white;
   margin-bottom: 0;
   padding: 1rem;
+  color: #D5203E;
   }
 
   .messages {
   color: grey;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   padding: 1rem;
   }
 
   #new_message {
-    border-top: 1px solid grey;
+    border-top: 1px solid white;
     padding: 1rem;
 
     .form-group {
