--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/navbar" %>
 <div class="container min-vh-100 d-flex justify-content-center align-items-center">
   <div class="row w-100">
     <h2 class="text-center">Votre avis nous intéresse !</h2>
@@ -10,5 +11,3 @@
       </div>
   </div>
 </div>
-
-
