--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,11 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <li><%= link_to "Mes réservations", reservations_path, class: "dropdown-item" %></li>
-              <li><%= link_to "Messages", "#", class: "dropdown-item" %></li>
+              <% if @chatrooms.present? %>
+                  <% @chatrooms.each do |chatroom| %>
+                    <li><%= link_to "Mes messages", chatroom_path(chatroom), class: "dropdown-item" %></li>
+                  <% end %>
+                <% end %>
               <li><%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %></li>
             </ul>
           </li>
