Index des reservations

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,25 +1,25 @@
 <%= render "shared/navbar" %>
-<div class="container">
- <div class="col">
-  <div class="row">
-    <% if @reservations.any? %>
-      <% @reservations.each do |r| %>
-        <strong><%= r.experience.nom %></strong>
-        <p>du <%= r.date_de_debut.strftime("%d/%m/%Y") %> au <%= r.date_de_fin.strftime("%d/%m/%Y")%></p>
-        <p><%= r.experience.prix %> euros</p>
-
-        <% if Date.today < r.date_de_debut %>
-          <p>Votre réservation n'a pas encore commencé </p>
-        <% elsif Date.today > r.date_de_fin %>
-          <p>Votre réservation est terminée </p>
-        <% else %>
-          <p>Votre réservation est en cours </p>
+<div class="container mt-5">
+<%= link_to "Retour aux expériences", experiences_path, class:"text-decoration-none text-dark mt-3"%>
+    <div class="row d-flex justify-content-center">
+      <div class="col-4">
+      <% if @reservations.any? %>
+        <% @reservations.each do |r| %>
+         <div class="reservation-card">
+          <p>du <%= r.date_de_debut.strftime("%d/%m/%Y") %> au <%= r.date_de_fin.strftime("%d/%m/%Y")%></p>
+          <p><%= r.experience.prix %> euros</p>
+          <% if Date.today < r.date_de_debut %>
+            <p>Votre réservation n'a pas encore commencé </p>
+          <% elsif Date.today > r.date_de_fin %>
+            <p>Votre réservation est terminée </p>
+          <% else %>
+            <p>Votre réservation est en cours </p>
+          <% end %>
+          </div>
         <% end %>
-      <% end %>
-      <% else %>
-        <p>Vous n'avez pas de réservation en cours</p>
-      <% end %>
+        <% else %>
+          <p>Vous n'avez pas de réservation en cours</p>
+        <% end %>
+    </div>
   </div>
- </div>
- <%= link_to "Retour aux expériences", experiences_path%>
 </div>
