Ajout de la gem letter opener

--- a/app/views/reservation_mailer/reservation_approved.html.erb
+++ b/app/views/reservation_mailer/reservation_approved.html.erb
@@ -1,7 +1,7 @@
 <h1>Bonne nouvelle !</h1>
 
-<p>Votre demande de réservation pour <%= @reservation.listing.title %> a été approuvée 🎉</p>
+<p>Votre demande de réservation pour <%= @reservation.experience.nom %> a été approuvée 🎉</p>
 
-<p>Dates : <%= @reservation.start_date %> au <%= @reservation.end_date %></p>
+<p>Dates : <%= @reservation.date_de_debut %> au <%= @reservation.date_de_fin %></p>
 
 <p>Merci d'utiliser notre plateforme !</p>
