--- a/app/views/admin_mailer/new_reservation.html.erb
+++ b/app/views/admin_mailer/new_reservation.html.erb
@@ -1,5 +1,5 @@
 <h1>Nouvelle réservation en attente</h1>
 
-<p>Un utilisateur a fait une nouvelle demande de réservation pour <%= @reservation.listing.title %> du <%= @reservation.start_date %> au <%= @reservation.end_date %>.</p>
+<p>Un utilisateur a fait une nouvelle demande de réservation pour <%= @reservation.experience.nom %> du <%= @reservation.date_de_debut %> au <%= @reservation.date_de_debut %>.</p>
 
 <p>Veuillez vous connecter à l'admin pour valider ou refuser cette demande.</p>
