--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -6,6 +6,7 @@
       <% if @reservations.any? %>
         <% @reservations.each do |r| %>
          <div class="reservation-card">
+          <p><%= r.experience.nom %></p>
           <p>du <%= r.date_de_debut.strftime("%d/%m/%Y") %> au <%= r.date_de_fin.strftime("%d/%m/%Y")%></p>
           <p><%= r.experience.prix %> euros</p>
           <% if Date.today < r.date_de_debut %>
