--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
+
+          <% if current_user.admin? %>
+            <%= link_to "Tableau de bord", admin_dashboard_path, class: "nav-link" %>
+          <% end %>
+
           <li class="nav-item active">
             <%= link_to "Accueil", root_path, class: "nav-link" %>
           </li>
@@ -17,12 +22,16 @@
               Mon compte
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><%= link_to "Mes réservations", reservations_path, class: "dropdown-item" %></li>
+              <% if @experience.present? %>
+                <li><%= link_to "Mes réservations", experience_reservations_path(@experience), class: "dropdown-item" %></li>
+              <% end %>
+
               <% if @chatrooms.present? %>
-                  <% @chatrooms.each do |chatroom| %>
-                    <li><%= link_to "Mes messages", chatroom_path(chatroom), class: "dropdown-item" %></li>
-                  <% end %>
+                <% @chatrooms.each do |chatroom| %>
+                  <li><%= link_to "Mes messages", chatroom_path(chatroom), class: "dropdown-item" %></li>
                 <% end %>
+              <% end %>
+
               <li><%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %></li>
             </ul>
           </li>
