Mise à jour statut Réservation du controller de réservations

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,5 +1,27 @@
 <%= render "shared/navbar" %>
 <div class="container mt-5">
+  <% if current_user&.admin? %>
+  <h1>Tableau de bord de l'admin</h1>
+
+  <% @reservations.each do |reservation| %>
+    <div class="reservation-card">
+
+      <p><strong>Utilisateur :</strong> <%= reservation.user.nickname %></p>
+      <p><strong>mail  :</strong> <%= reservation.user.email %></p>
+      <p><strong>Expérience :</strong> <%= reservation.experience.nom %></p>
+      <p><strong>Date de début :</strong> <%= reservation.date_de_debut.strftime('%d %b %Y') %></p>
+      <p><strong>Date de fin :</strong> <%= reservation.date_de_fin.strftime('%d %b %Y') %></p>
+      <p><strong>Statut :</strong> <%= reservation.statut %></p>
+    <div>
+        <%= link_to 'Modifier le statut', edit_reservation_path(reservation), class: 'btn btn-primary' %>
+    </div>
+
+      </div>
+   
+    <hr>
+  <% end %>
+<% else %>
+
 <%= link_to "Retour aux expériences", experiences_path, class:"text-decoration-none text-dark mt-3"%>
     <div class="row d-flex justify-content-center">
       <div class="col-4">
@@ -27,3 +49,4 @@
     </div>
   </div>
 </div>
+<% end %>
