--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,41 +6,34 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Accueil", root_path, class: "nav-link" %>
-          </li>
+   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav me-auto">
+    <% if user_signed_in? %>
+      <!-- Menu pour les utilisateurs connectés -->
+      <li class="nav-item">
+        <%= link_to "Mes réservations", reservations_path, class: "nav-link" %>
+      </li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Mon compte
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li>
-                <%= link_to "Mes réservations", reservations_path, class: "dropdown-item" %>
-              </li>
-
-              <% if @chatrooms.present? %>
-                <% @chatrooms.each do |chatroom| %>
-                  <li>
-                    <%= link_to "Mes messages", chatroom_path(chatroom), class: "dropdown-item" %>
-                  </li>
-                <% end %>
-              <% end %>
-
-              <li>
-                <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
-              </li>
-            </ul>
-          </li>
-        <% else %>
+      <% if @chatrooms.present? %>
+        <% @chatrooms.each do |chatroom| %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Mes messages", chatroom_path(chatroom), class: "nav-link" %>
           </li>
         <% end %>
-      </ul>
-    </div>
+      <% end %>
+
+      <!-- Lien pour se déconnecter -->
+      <li class="nav-item">
+        <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
+      </li>
+    <% else %>
+      <!-- Menu pour les utilisateurs non connectés -->
+      <li class="nav-item">
+        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+      </li>
+    <% end %>
+  </ul>
+</div>
+
   </div>
 </div>
