--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,5 @@
-<h1>User#welcome</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/welcome.html.erb
-</p>
+<div class="container">
+  <h1>
+    Welcome to our application!
+  </h1>
+</div>
